Fix minor bug of navigation menu Set visibility hidden of nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -645,6 +645,7 @@ body {
     left: 0;
     z-index: 1500;
     opacity: 0;
+    visibility: hidden;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
   .navigation__list {
     position: absolute;
@@ -677,7 +678,8 @@ body {
     transform: scale(80); }
   .navigation__checkbox:checked ~ .navigation__nav {
     width: 100%;
-    opacity: 1; }
+    opacity: 1;
+    visibility: visible; }
   .navigation__icon {
     position: relative;
     margin-top: 3.5rem; }
