--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -35,6 +35,7 @@
         left: 0;
         z-index: 1500;
         opacity: 0;
+        visibility: hidden;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
     &__list {
@@ -83,6 +84,7 @@
     &__checkbox:checked ~ &__nav {
         width: 100%;
         opacity: 1;
+        visibility: visible;
     }
 
     // Icon
